--- a/01 - JavaScript Drum Kit/style.css
+++ b/01 - JavaScript Drum Kit/style.css
@@ -10,10 +10,23 @@ body,html {
   font-family: sans-serif;
 }
 
+body {display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;}
+
+h1, h2 {color: #ffc600;
+        background-color: hsla(0, 0%, 0%, 75%);
+        width: fit-content;
+        padding: .5rem;}
+
+h1 {font-size: 3em;}
+
+h2 {font-size: 2em;}
+
 .keys {
   display: flex;
-  flex: 1;
-  min-height: 100vh;
   align-items: center;
   justify-content: center;
 }
